# gil

./: .gitignore  BUILD.bazel
develop/doc/html/: genindex.html  index.html  installation.html  io.html  naming.html  numeric.html  search.html  toolbox.html
develop/doc/html/design/: basics.html  channel.html  (+16 more)
html/: genindex.html  index.html  installation.html  io.html  naming.html  numeric.html  search.html  toolbox.html
html/design/: basics.html  channel.html  color_base.html  color_space.html  concepts.html  conclusions.html  dynamic_image.html  examples.html  extending.html  image.html  image_view.html  index.html  metafunctions.html  pixel.html  pixel_iterator.html  pixel_locator.html  point.html  technicalities.html
html/histogram/: create.html  cumulative.html  extend.html  fill.html  index.html  limitations.html  overview.html  stl_compatibility.html  subhistogram.html  utilities.html
html/histogram/extension/: index.html  overview.html  std.html
html/image_processing/: affine-region-detectors.html  basics.html  index.html  overview.html
html/image_processing/contrast_enhancement/: histogram_equalization.html  histogram_matching.html  index.html  overview.html
html/tutorial/: gradient.html  histogram.html  video.html
include/boost/gil/: algorithm.hpp  channel.hpp  channel_algorithm.hpp  color_base.hpp  color_base_algorithm.hpp  gil_concept.hpp  image.hpp  packed_pixel.hpp  pixel.hpp  planar_pixel_iterator.hpp  utilities.hpp
meta/: libraries.json
test/: channel.cpp  image.cpp  image_io.cpp  pixel.cpp  pixel_iterator.cpp  promote_integral.cpp
(+28 files in other folders)
