load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "boost.gil",
    hdrs = glob([
        "include/**/*.hpp",
        "include/**/*.h",
    ]),
    includes = ["include"],
    deps = [
        "@boost.assert",
        "@boost.concept_check",
        "@boost.config",
        "@boost.container_hash",
        "@boost.core",
        "@boost.filesystem",
        "@boost.integer",
        "@boost.iterator",
        "@boost.mp11",
        "@boost.preprocessor",
        "@boost.type_traits",
        "@boost.variant2",
    ],
)
